fantasy function added
